--- a/app/views/profiles/_my_profile.html.erb
+++ b/app/views/profiles/_my_profile.html.erb
@@ -38,7 +38,7 @@
   <div class="profileButtons flex justify-content-around p-3 pt-0">
     <%= link_to "#", class: "mr-3", class: "btn-lg px-0 btn-primary" do %>
         <%= image_tag "icons/share-white.svg", alt: "Share profile" %>
-        <p class="textWhite">SHARE</p>
+        <p class="textWhite share-link">SHARE</p>
     <% end %>
       <div class="spacer">
 
