fix manifest - once again

--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -17,7 +17,7 @@
         "sizes": "<%= match && match[:size] %>",
         "type": "image/png"
       }<%= "," unless (files.size - 1) == index %>
-    <% end %>,
+    <% end %>
     {
       "src": "<%= image_path "manifest_icons/android-icon-192x192.png" %>",
       "sizes": "192x192",
