mobile version with navigator.share working

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -28,7 +28,7 @@
             <%= link_to edit_job_path(@job), class: "action-link" do %>
               EDIT
             <% end %>
-            <%= link_to "#", class: "action-link share-link", data: { url: "https://www.flxibl.io/jobs/#{@job.id}", title: "Shared job from flxibl.io", text: @job.description} do %>
+            <%= link_to "#", class: "action-link share-link", data: { url: "https://www.flxibl.io/jobs/#{@job.id}", title: "Shared job from flxibl app", text: @job.description.truncate(120) } do %>
               SHARE
             <% end %>
             <%= link_to "#", class: "action-link" do %>
