--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -18,8 +18,8 @@
                   REMOVE
                 <% end %>
               <% end %>
-              <%= link_to "#", class: "action-link flex items-center w-100" do %>
-                <%= image_tag "icons/share-white", alt: "share profile", width: 24, height: 24, class: "mr-3 share-link", data: { url: "https://www.flxibl.io/profiles/#{@profile.id}", title: "#{@profile.display_name}'s' profile from flxibl.io", text: @profile.overview } %>
+              <%= link_to "#", class: "action-link share-link flex items-center w-100", data: { url: "https://www.flxibl.io/profiles/#{@profile.id}", title: "#{@profile.display_name}'s' profile on flxibl", text: @profile.overview.truncate(120) } do %>
+                <%= image_tag "icons/share-white", alt: "share profile", width: 24, height: 24, class: "mr-3" %>
                 SHARE
               <% end %>
             </div>
