--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -181,11 +181,19 @@ $day-header-height: 60px;
 						&.red {
 							background: $flat-red-5;
 							border-top-color: $flat-red-3;
+
+							.event-details {
+								background: $flat-red-5;
+							}
 						}
 
 						&.green {
 							background: $flat-green-5;
 							border-top-color: $flat-green-3;
+
+							.event-details {
+								background: $flat-green-5;
+							}
 						}
 
 						.event-details {
