--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,3 +5,6 @@
     <%= render "general_profile" %>
   <% end %>
 </div>
+
+<div class="shareModalContainer"></div>
+<%= javascript_pack_tag "components/ShareModal" %>
