added some styling

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,8 @@ $light-gray: #f9fbfe;
 $dark-gray: #2f2f3e;
 $orange: #ff9774;
 $red: #ff464b;
+$flat-red: #FFDCDD;
+$wine-red: #B33236;
 $black: #2f2f3e;
 $light-black: #6c7b8a;
 $blue: #828ff4;
@@ -22,6 +24,7 @@ $flat-brown-5: #cbbdbd;
 
 $flat-green-3: #1ed7a6;
 $flat-green-5: #d3f7ed;
+$leaf-green: #179474;
 
 $flat-red-2: #cc383c;
 $flat-red-3: #ff464b;
