--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -11,6 +11,8 @@ $day-header-height: 60px;
 			width: 100%;
 			height: 100vh;
 			z-index: 1;
+			left: 0;
+			top: 0;
 
 			.header {
 				border-bottom: 2px solid $blueish-gray;
