--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -44,7 +44,7 @@
           <%= image_tag "icons/cross-white.svg", alt: "rejected bookings" %>
         </div>
         <div class="ml-2">
-          <h4 class="m-0">Rejected</h4>
+          <h4 class="m-0">Cancelled / Declined</h4>
           <p class="subtitle m-0"><%= pluralize @bookings.rejected.count, "booking" %></p>
         </div>
       </div>
