--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -1,11 +1,11 @@
 {
-  "background_color": "white",
+  "background_color": "#FFFFFF",
   "description": "Reduce your headcount and headache by building your very own freelance workforce. Flxibl is the most efficient way to manage your network of freelancers. Sign up for free today.",
   "display": "fullscreen",
   "name": "Flxibl",
   "short_name": "Flxibl",
-  "theme_color": "#f9fbfe",
-  "start_url": ".",
+  "theme_color": "#FFFFFF",
+  "start_url": "/",
   "orientation": "portrait",
   "icons": [
     <% files = Dir.entries(Rails.root.join("app/assets/images/manifest_icons/")) %>
@@ -19,8 +19,8 @@
       },
     <% end %>
     {
-      "src": "<%= image_path "manifest_icons/android-icon-512x512.png" %>",
-      "sizes": "512x512",
+      "src": "<%= image_path "manifest_icons/android-icon-192x192.png" %>",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     }
