--- a/app/assets/stylesheets/pages/_managers_index.scss
+++ b/app/assets/stylesheets/pages/_managers_index.scss
@@ -24,6 +24,12 @@
 			&:nth-child(odd) {
 				border-right: 1px solid#f4f6f9;
 			}
+
+      }
 		}
 	}
+  .add-more {
+    img {
+      margin-top: -64px;
+    }
 }
