--- a/app/views/managers/index.html.erb
+++ b/app/views/managers/index.html.erb
@@ -16,6 +16,11 @@
     <%= render partial: "managers/cards", locals: { managers: @managers } %>
   </div>
 
+  <div class="add-more flex flex-column items-center justify-content-center">
+    <p class="text-center textBlue bold textLg">Get more clients by sharing your profile </p>
+    <%= image_tag "icons/phone-hand.svg", alt: "phone-hand", width: 312, height: 312 %>
+  </div>
+
   <div class="none" id="filter-content">
     <%= render partial: "managers/filter_content" %>
   </div>
