public jobs#show

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,5 +1,5 @@
 #modal-content {
-	@extend .vh-100, .vw-100, .flex, .justify-content-center, .items-center;
+	@extend .vh-100, .vw-100, .justify-content-center, .items-center;
 
 	position: absolute;
 	top: 0;
