--- a/app/assets/stylesheets/pages/_registration_and_session.scss
+++ b/app/assets/stylesheets/pages/_registration_and_session.scss
@@ -1,5 +1,9 @@
 .registration-page,
 .login-page {
-	background: $blueish-gray;
-	height: 100%;
+	background-image: asset_url('bubbles.png');
+	height: 100vh;
+
+  input {
+    box-shadow: 0px 2px 10px rgba(50, 51, 94, 0.17);
+  }
 }
