--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -19,13 +19,29 @@
   </section>
 
   <section class="cards">
-    <%= render partial: "profiles/cards", locals: { profiles: @profiles } %>
+    <% unless params[:ob].present? && params[:ob] == "t" %>
+      <%= render partial: "profiles/cards", locals: { profiles: @profiles } %>
+    <% else %>
+      <div class="profiles-overlay flex flex-column items-center justify-content-start">
+        <p class="main-text">
+          Your network of freelancers will be stored here
+        </p>
+        <div class="flex-grow-1">
+          <%= image_tag "icons/agenda.svg", alt: "agenda.svg" %>
+        </div>
+        <p class="main-text add-free">
+          Add freelancers:
+        </p>
+      </div>
+    <% end %>
   </section>
 
-  <div class="add-more flex flex-column items-center justify-content-center">
-    <p class="text-center textBlue bold textLg">Find more freelancers by posting a job</p>
-    <%= image_tag "icons/phone-hand.svg", alt: "phone-hand", width: 312, height: 312 %>
-  </div>
+  <% unless params[:ob].present? && params[:ob] == "t" %>
+    <div class="add-more flex flex-column items-center justify-content-center">
+      <p class="text-center textBlue bold textLg">Find more freelancers by posting a job</p>
+      <%= image_tag "icons/phone-hand.svg", alt: "phone-hand", width: 312, height: 312 %>
+    </div>
+  <% end %>
 
   <div class="none" id="filter-content">
     <%= render partial: "profiles/filter_content" %>
