modified react component to be displayed everytime -> it wasn't being rendered because it was listening to the wrong event ( turbolinks does not trigger documentload) Also: Modified the component so it adapts to the freelancers overlay based on params received

--- a/app/assets/stylesheets/pages/_profiles_index.scss
+++ b/app/assets/stylesheets/pages/_profiles_index.scss
@@ -47,4 +47,29 @@
       }
     }
   }
+
+  .manager-actions-wrapper {
+    position: fixed;
+    bottom: 352px;
+    right: 24px;
+  }
+
+  #manager-actions-button {
+    position: fixed;
+    bottom: 88px;
+    right: 24px;
+    background-color: $blue-2;
+    padding: 16px;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+  }
+
+  .add-free {
+    position: sticky;
+    bottom: 80px;
+    right: 24px;
+  }
 }
