--- a/app/assets/stylesheets/components/_action_button.scss
+++ b/app/assets/stylesheets/components/_action_button.scss
@@ -12,7 +12,7 @@
 		z-index: 1;
 		background: rgba(20, 15, 38, 0.5);
 		backdrop-filter: blur(100px);
-		width: 200px;
+		width: 180px;
 		padding: 12px 24px;
 		border-radius: 15px;
 		position: absolute;
@@ -45,15 +45,12 @@
 	.trigger {
 		@extend .rounded-circle, .flex, .justify-content-center, .items-center;
 
-		width: 50px;
-		height: 50px;
-		background: rgba(20, 15, 38, 0.5);
+		width: 64px;
+		height: 64px;
+		background: $blue-2;
 		backdrop-filter: blur(100px);
 		font-size: 40px;
 		color: white;
 
-		.toggler {
-			transform: rotate(45deg);
-		}
 	}
 }
