fix new job flatpickr

--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -66,7 +66,7 @@
 
           <div class="dates-input-wrapper">
             <label for="dates" class="block textLightBlack">Dates</label>
-            <input type="text" name="dates" class="mb-2 w-100 datepicker">
+            <input id="job-datepicker" type="text" name="dates" class="mb-2 w-100 datepicker">
           </div>
 
           <div>
