--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -65,7 +65,7 @@
         </div>
 
         <div>
-          <%= f.input :weekends, label: "Incl. weekends", input_html: { class: "mr-2" }, label_html: { class: "block textGray nowrap flex items-center" }, wrapper_html: { class: "flex flex-row-reverse items-center mb-2"} %>
+          <%= f.input :weekends, label: "Incl. weekends", input_html: { class: "mr-2 big" }, label_html: { class: "block textGray nowrap flex items-center" }, wrapper_html: { class: "flex flex-row-reverse items-center mb-2"} %>
         </div>
       </div>
 
