add canceled booking status

--- a/app/assets/stylesheets/components/_booking_card.scss
+++ b/app/assets/stylesheets/components/_booking_card.scss
@@ -73,7 +73,8 @@
 		border-top: 6px solid $flat-green-3;
 	}
 
-	&.rejected {
+	&.rejected,
+	&.canceled {
 		border-top: 6px solid $flat-red-3;
 	}
 
