change to canceled in dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -54,7 +54,8 @@
 					background: $flat-yellow-3;
 				}
 
-				&.rejected {
+				&.rejected,
+				&.canceled {
 					background: $flat-red-2;
 				}
 
