--- a/app/views/pages/_freelancer_dashboard.html.erb
+++ b/app/views/pages/_freelancer_dashboard.html.erb
@@ -35,16 +35,16 @@
 
     <div class="card-container flex items-center justify-content-between">
       <div class="flex items-center">
-        <div class="card rejected">
-          <%= image_tag "icons/cross-white.svg", alt: "rejected bookings" %>
+        <div class="card canceled">
+          <%= image_tag "icons/cross-white.svg", alt: "canceled bookings" %>
         </div>
         <div class="ml-2">
-          <h4 class="m-0">Rejected</h4>
-          <p class="subtitle m-0"><%= pluralize @bookings.rejected.count, "booking" %></p>
+          <h4 class="m-0">Canceled</h4>
+          <p class="subtitle m-0"><%= pluralize @bookings.canceled.count, "booking" %></p>
         </div>
       </div>
-      <%= link_to bookings_path(status: 2) do %>
-        <%= image_tag "icons/right-arrow.svg", alt: "rejected bookings" %>
+      <%= link_to bookings_path(status: 3) do %>
+        <%= image_tag "icons/right-arrow.svg", alt: "canceled bookings" %>
       <% end %>
     </div>
 
