rating card styling

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,6 +13,7 @@
 @import "profile_card";
 @import "skill_pill";
 @import "profile_tabs";
+@import "rating_card";
 @import "tom_select";
 @import "widget";
 @import "share_link_modal";
