--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -114,7 +114,7 @@
       <%= link_to "Ratings (#{@ratings&.count})", profile_path(@profile, tab: 'notes', anchor: 'skills'), id: "note-tab", class: "tab #{'active' if params[:tab] == 'notes' }", remote: true %>
     </div>
 
-    <div class="p-3" id="tab-content">
+    <div id="tab-content">
       <%= render "#{params[:tab] || 'about' }_content", locals: { profile: @profile } %>
     </div>
 
