--- a/app/views/profiles/_links_content.html.erb
+++ b/app/views/profiles/_links_content.html.erb
@@ -1,13 +1,15 @@
-<% unless @links.empty? %>
-  <h3 class=""><small class="textGray">LINKS</small></h3>
-  <% @links.each do |link| %>
-    <%= link_to link.title&.capitalize, sanitize_url(link.url), target: :_blank, class: "btn btn-secondary mb-3"  %>
+<div class="px-3">
+  <% unless @links.empty? %>
+    <h3 class=""><small class="textGray">LINKS</small></h3>
+    <% @links.each do |link| %>
+      <%= link_to link.title&.capitalize, sanitize_url(link.url), target: :_blank, class: "btn btn-secondary mb-3"  %>
+    <% end %>
   <% end %>
-<% end %>
 
-<% unless @documents.empty? %>
-  <h3 class=""><small class="textGray">DOCUMENTS</small></h3>
-  <% @documents.each do |link| %>
-    <%= link_to link.title&.capitalize, download_attachment_path(link), method: :post, class: "btn btn-secondary mb-3" %>
+  <% unless @documents.empty? %>
+    <h3 class=""><small class="textGray">DOCUMENTS</small></h3>
+    <% @documents.each do |link| %>
+      <%= link_to link.title&.capitalize, download_attachment_path(link), method: :post, class: "btn btn-secondary mb-3" %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
