controlle scaffolding and styling

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -92,7 +92,7 @@
       </div>
     <% else %>
       <%= link_to new_user_session_path, class: "action-link flex items-center w-100 btn btn-primary textWhite py-3 w-100 border-box justify-content-center my-4" do %>
-        <%= image_tag "icons/zap-white", alt: "zap profile", width: 32, height: 32, class: "mr-3" %>
+        <%= image_tag "icons/zap-white.svg", alt: "zap profile", width: 32, height: 32, class: "mr-3" %>
         SIGN IN TO APPLY
       <% end %>
     <% end %>
