email validation and styling

--- a/app/views/custom_invitations/_invited_list_item.html.erb
+++ b/app/views/custom_invitations/_invited_list_item.html.erb
@@ -1,4 +1,4 @@
-<div class="invitedWrapper flex justify-content-between items-center w-100">
+<div class="invitedWrapper flex justify-content-between items-baseline w-100">
   <p class="textBetween textGray flex-grow-1 mb-1"><%= @email %></p>
   <!-- <p class="textSm textGray px-2 uppercase">invited</p> -->
   <%= link_to "resend", "#", class: "textSm textBlue pl-2 uppercase" %>
